navbar layout improved. Fixed pixel height on mobile compenents an brand

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,8 @@ html body div.nav-container.container {
   padding: 0;
 }
 
+
+
 // Styles applying to  whole page
 html {
   //begin body styles
@@ -104,7 +106,7 @@ html {
         }
       }
       .navbar-brand {
-        height: 3.25rem;
+        height: 56px;
       }
       .navbar-brand .navbar-item {
         font-size: 2rem;
@@ -131,6 +133,15 @@ html {
             color: $heading-dark-grey;
           }
         }
+      }
+      .navbar-brand .navbar-item .burger-icon-brand {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0;
+      }
+      .navbar-brand .navbar-burger {
+        height: 56px;
       }
     }
 
